# AWESPA

./: .buildinfo  .gitignore  .gitmodules  README.md  README_dev.md  general_module.html  genindex.html  index.html  objects.inv  power_inertiafree_qsm.html  power_luchsinger.html  power_module.html  pyproject.toml  requirements.txt  search.html  searchindex.js  wind_clustering.html  wind_module.html
.doctrees/: environment.pickle  general_module.doctree  index.doctree  power_inertiafree_qsm.doctree  power_luchsinger.doctree  power_module.doctree  wind_clustering.doctree  wind_module.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/awespa/power/: base.html  inertiafree_qsm_power.html  luchsinger_power.html
_modules/awespa/wind/: base.html  clustering.html
_sources/: index.rst.txt  power_inertiafree_qsm.rst.txt  power_module.rst.txt  wind_clustering.rst.txt  wind_module.rst.txt
config/: Luchsinger_simulation_settings_config.yml  airborne.yml  control_config.yml  groundstation_config.yml  inertiafree_qsm_simulation_settings.yml  kite_config.yml  kitepower V3_20.yml  luchsinger_settings.yml  main_config.yml  operational_constraints.yml  optimisation_config.yml  power_estimation_config.yml  tether.yml  wind_clustering_config.yml  wind_resource.yml  wind_resource6.yml
config/example/: intertiafree-qsm_settings.yml  luchsinger_settings.yml  wind_clustering_settings.yml
config/meridional_case1/: wind_clustering_settings_case1.yml
config/meridional_case_1/: airborne.yml  ground_station.yml  operational_constraints.yml  wind_clustering_config.yml  wind_resource.yml
docs/: Makefile  conf.py  general_module.rst  index.rst  make.bat  power_inertiafree_qsm.rst  power_luchsinger.rst  power_module.rst  requirements.txt  wind_clustering.rst  wind_module.rst
scripts/: compare_power_models.py  example_awera_usage.py  power_estimation.py  run_inertiafree_qsm.py  run_luchsinger.py  run_luchsinger_aep.py  run_wind_clustering.py  test_awera_structure.py
scripts/meridional/: full_aep_analysis_case_1.py
scripts/meridional/lidar_comparison/: read_lidar.py  unzipping.py
scripts/shear_gaming/: shear_gaming.py  shear_normalisation only reel out.py  shear_normalisation.py  show_standard_profile.py
src/awera/: __init__.py
src/awera/control/: __init__.py  base.py
src/awera/groundstation/: __init__.py  base.py
src/awera/kite/: __init__.py  base.py
src/awera/optimisation/: __init__.py  base.py
src/awera/pipeline/: __init__.py  aep.py
src/awera/power/: __init__.py  awe_power.py  base.py
src/awera/wind/: __init__.py  base.py  clustering.py
src/awespa/: __init__.py
src/awespa/pipeline/: __init__.py  aep.py
src/awespa/power/: __init__.py  awe_power.py  base.py  ineritafree_qsm_power.py  inertiafree_qsm_power.py  luchsinger_power.py
src/awespa/wind/: __init__.py  base.py  clustering.py
