[project]

name = "awespa"
# Define the name of your project here. This is mandatory. Once you publish your package for the first time,
# this name will be locked and associated with your project. It affects how users will
# install your package via pip, like so:

# $ pip install awespa

# Your project will be accessible at: https://pypi.org/project/awespa/

version = "1.0.0"
# Version numbers should conform to PEP 440, and are also mandatory (but they can be set dynamic)
# https://www.python.org/dev/peps/pep-0440/

description = "Airborne Wind Energy System Performance Assessment Toolchain"
# Provide a short, one-line description of what your project does. This is known as the
# "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary

readme = "README.md"
# Here, you can include a longer description which often mirrors your README file.
# This description will appear on PyPI when your project is published.
# This corresponds to the "Description" metadata field:
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#readme

requires-python = ">=3.8"
# Indicate the versions of Python your project is compatible with. Unlike the
# 'Programming Language' classifiers, 'pip install' will verify this field
# and prevent installation if the Python version does not match.
# Check https://endoflife.date/python for Python versions that are still supported.

license = {file = "LICENSE"}
# This specifies the license.
# It can be a text (e.g. license = {text = "MIT License"}) or a reference to a file with the license text as shown above.

keywords = ["airborne-wind-energy", "AWE", "wind-energy", "power-estimation", "wind-clustering", "AEP", "annual-energy-production", "simulation"]
# Keywords that describe your project. These assist users in discovering your project on PyPI searches.
# These should be a comma-separated list reflecting the nature or domain of the project.

authors = [
  {name = "Joren Bredael", email = "j.bredael@tudelft.nl" }
]
# Information about the original authors of the project and their contact details.

maintainers = [
  {name = "Joren Bredael", email = "j.bredael@tudelft.nl" }
]
# Information about the current maintainers of the project and their contact details.

# Classifiers help categorize the project on PyPI and aid in discoverability.
# For a full list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # Indicate the development status of your project (maturity). Commonly, this is
  #   3 - Alpha
  #   4 - Beta
  #   5 - Stable
  #.  6 - Mature
  "Development Status :: 3 - Alpha",

  # Target audience
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",

  # License type
  "License :: OSI Approved :: MIT License",

  # Python versions your software supports. This is not checked by pip install, and is different from "requires-python".
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# Dependencies needed by your project. These packages will be installed by pip when
# your project is installed. Ensure these are existing, valid packages.

# For more on how this field compares to pip's requirements files, see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "numpy",
  "pandas>=1.5.3",
  "matplotlib>=3.7.1",
  "pyyaml",
  "scipy",
  "scikit-learn",
  "xarray",
  "netCDF4"
]

# You can define additional groups of dependencies here (e.g., development dependencies).
# These can be installed using the "extras" feature of pip, like so:

#   $ pip install exampleproject[dev]

# These are often referred to as "extras" and provide optional functionality.
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8",
  "isort",
  "mypy"
]
docs = [
  "sphinx",
  "sphinx-tabs",
  "sphinx-copybutton",
  "myst-parser",
  "linkify-it-py",
  "pydata-sphinx-theme",
  "sphinx-book-theme",
  "sphinx-rtd-theme"
]

[project.urls]
"Homepage" = "https://github.com/awegroup/AWESPA"
"Source" = "https://github.com/awegroup/AWESPA"
"Documentation" = "https://github.com/awegroup/AWESPA#readme"
"Bug Tracker" = "https://github.com/awegroup/AWESPA/issues"

# To grab all the files from the src folders of installed packages, not only the .py files
[tool.setuptools.packages.find]
where = ["src"]

# List of relevant URLs for your project. These are displayed on the left sidebar of your PyPI page.
# This can include links to the homepage, source code, changelog, funding, etc.


# This [project] example was adopted from https://github.com/pypa/sampleproject/blob/main/pyproject.toml
